CSPACE-4803: merged with updated upstream; cleaned up issue with small window forcing repeatable buttons to wrap around field; cleaned up floating issues in RoleTemplate.html/cabinet.css; small style fixes as I came across them

--- a/src/main/webapp/defaults/css/StructuredDate.css
+++ b/src/main/webapp/defaults/css/StructuredDate.css
@@ -41,9 +41,9 @@ table .cs-structuredDate-popup {
     font-size: 11px;
     color: #3B3B3C;
 }
-.content input.cs-structuredDate-input {
+.content input.cs-structuredDate-input,
+.info-pair-date .content input.cs-structuredDate-input {
 	background:url('../images/icnStructuredDate.png') no-repeat scroll 98% center #fff;
-	border:1px solid #C7CFD4;
 }
 
 .content input.cs-structuredDate-input[disabled] {
