--- a/src/main/webapp/defaults/css/cabinet.css
+++ b/src/main/webapp/defaults/css/cabinet.css
@@ -16,11 +16,11 @@ https://source.collectionspace.org/collection-space/LICENSE.txt
 .flc-cabinet-handle, .flc-cabinet-row {padding:3px 4px 1px 6px; border-bottom:1px solid #E8E8E8;}
 a.flc-cabinet-header {text-decoration:none;}
 .flc-cabinet-drawer  {/*margin-left:12px;*/}
-.radio-row {/*position:absolute; left:0;*/ float:left;}
+.radio-row {/*position:absolute; left:0;*/ float:none; display:inline-block; padding-left:2px;}
 .radio {padding: 0 10px;}
-.permission-name {padding-left:10px; margin:0; margin-top:3px; float:left;}
+.permission-name {padding-left:10px; margin:0; margin-top:3px; float:none; display:inline-block;}
 .role-buttons {margin-top:-38px; margin-bottom:12px; /*position:relative; top:-35px; margin-bottom:-35px;*/}
 .addrole {float:right; margin-bottom:-18px;}
 
 .cs-permissions-table {border: 1px solid #C7CFD4; font-size:11px; line-height:100%;}
-.cs-permissions-row {padding:3px 4px 1px 0; border-bottom:1px solid #E8E8E8;}
+.cs-permissions-row {padding:3px 4px 1px 2px; border-bottom:1px solid #E8E8E8;}
