--- a/src/main/webapp/defaults/css/repeatable.css
+++ b/src/main/webapp/defaults/css/repeatable.css
@@ -131,7 +131,8 @@ table tr.csc-repeatable-repeat input.cs-repeatable-delete[disabled]:focus {
     float: left;
 }
 .infoDiv input.cs-repeatable-delete {
-    float:right;
+    float:none;
+    display:inline-block;
     border:none;
     vertical-align:top;
     padding:0px;
@@ -148,7 +149,7 @@ table tr.csc-repeatable-repeat input.cs-repeatable-delete[disabled]:focus {
 .infoDiv input.cs-repeatable-delete[disabled],
 .infoDiv input.cs-repeatable-delete[disabled]:hover,
 .infoDiv input.cs-repeatable-delete[disabled]:focus {
-    float:right;
+    float:none;
     background-color:transparent !important;
     background:url('../images/icnDeleteDisabled.png') no-repeat 2px 3px;
 }
@@ -183,14 +184,19 @@ ul.cs-repeatable li.cs-repeatable-repeat div.cs-termList select {
 input.cs-autocomplete-input,
 ul.cs-repeatable li.cs-repeatable-repeat input.cs-autocomplete-input,
 ul.cs-repeatable li.cs-repeatable-repeat input.cs-repeatable-content,
-ul.cs-repeatable li.cs-repeatable-repeat textarea.cs-repeatable-content {
+ul.cs-repeatable li.cs-repeatable-repeat textarea.cs-repeatable-content,
+textarea.cs-repeatable-content,
+select.cs-repeatable-content {
     width: 88.5%;
 }
 
-
-textarea.cs-repeatable-content,
-select.cs-repeatable-content {
-    width: 90%;
+.information-subgroup input.cs-autocomplete-input,
+.information-subgroup ul.cs-repeatable li.cs-repeatable-repeat input.cs-autocomplete-input,
+.information-subgroup ul.cs-repeatable li.cs-repeatable-repeat input.cs-repeatable-content,
+.information-subgroup ul.cs-repeatable li.cs-repeatable-repeat textarea.cs-repeatable-content,
+.information-subgroup textarea.cs-repeatable-content,
+.information-subgroup select.cs-repeatable-content {
+    width: 87.5%;
 }
 
 div.infoGroup li.cs-repeatable-repeat {
@@ -213,7 +219,7 @@ td select {
 
 li.cs-repeatable-repeat div.cs-repeatable-content.cs-repeatable-stretched,
 li.cs-repeatable-repeat div.cs-termList.cs-repeatable-stretched {
-    width: 95%;
+    width: 94%;
 }
 
 ul.cs-repeatable li.cs-repeatable-repeat div.content.cs-repeatable-content input.cs-repeatable-add {
@@ -231,7 +237,12 @@ ul.cs-repeatable li.cs-repeatable-repeat div.content.cs-repeatable-content input
 
 div.cs-repeatable-group div.cs-repeatable-content,
 li.cs-repeatable-repeat {
-    width: 95%;
+    width: 93%;
+}
+
+.cs-fixedExternalURL .cs-repeatable-group div.cs-repeatable-content,
+.cs-fixedExternalURL li.cs-repeatable-repeat {
+    width: 100%;
 }
 
 div.infoGroup div.cs-repeatable-group {
